--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,11 @@
 html, body {
   background-color: #3a3a3a;
 }
+
+.component-fade-enter-active, .component-fade-leave-active {
+  transition: opacity .3s ease;
+}
+.component-fade-enter, .component-fade-leave-to
+/* .component-fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
